@@ -22,3 +22,9 @@
   section: pants
   gender: women
 
+- title: Harrington Jackets
+  desc: 
+  url: Harringtons.jpg
+  section: jackets
+  gender: men
+
