@@ -1,1 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?><feed xmlns="http://www.w3.org/2005/Atom" ><generator uri="https://jekyllrb.com/" version="3.8.7">Jekyll</generator><link href="http://localhost:4000/metropolis/feed.xml" rel="self" type="application/atom+xml" /><link href="http://localhost:4000/metropolis/" rel="alternate" type="text/html" /><updated>2020-12-24T14:37:12+10:00</updated><id>http://localhost:4000/metropolis/feed.xml</id><title type="html">Metropolis Clothing</title><subtitle>Metropolis Clothing Melbourne, Australia</subtitle></feed>
+<?xml version="1.0" encoding="utf-8"?><feed xmlns="http://www.w3.org/2005/Atom" ><generator uri="https://jekyllrb.com/" version="3.8.7">Jekyll</generator><link href="http://localhost:4000/metropolis/feed.xml" rel="self" type="application/atom+xml" /><link href="http://localhost:4000/metropolis/" rel="alternate" type="text/html" /><updated>2020-12-24T15:04:30+10:00</updated><id>http://localhost:4000/metropolis/feed.xml</id><title type="html">Metropolis Clothing</title><subtitle>Metropolis Clothing Melbourne, Australia</subtitle></feed>
