@@ -194,12 +194,22 @@ $(document).ready(function(){
 
 
 
+
+<div class="mt-4 col-xl-4 col-lg-4 col-sm-4 col-md-4 col-4 tooltip-wrap">
+    <figure><img class="jackets img-fluid" alt="Harrington Jackets" src="../gallery/Harringtons.jpg" /><figcaption class="jackets title text-center">Harrington Jackets</figcaption></figure>
+</div><!-- end col -->
+
+
+
+
 </div><!-- end row-->
 
 
 </div>
 <!-- end container -->
 <div class="text-center h6">Copyright © 2020 Metropolis Clothing - All Rights Reserved.</div>
+<div class="text-center h6">Site created by <a href="https://www.mikewilliamswebsites.com.au">Mike Williams Websites</a></div>
+<div class="text-center h6">logo by <a href="https://www.grafreak.com.au">grafreak</a></div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
